refactor: 일급 컬렉션 리스트 복사 copyOf -> unmodifiableList로 변경
- 리스트 수정을 막는 것이 목적이므로, 새로운 리스트를 생성하는 copyOf보다 원본 리스트를 read-only로 반환하는 unmodifiableList를 사용한다. (불필요한 메모리 오버헤드)
- 외부에서 리스트에 직접 접근해 수정하는 것을 막고, 수정 시에는 일급 컬렉션의 메서드를 사용하도록 한다.
- 이를 통해 캡슐화와 응집도를 높인다.